# hugging_face_basics

./: .gitignore  pyproject.toml
NER/: NER.ipynb
Q&A/: Q&A.ipynb
masked_language/: masked_language.ipynb
sentiment_analysis/: sentiment_analysis_basic.ipynb
text_generation/: text_generation.ipynb
text_summarization/: text_summarization.ipynb
zero-shot_classification/: zero-shot.ipynb
