[tool.poetry]
name = "sentiment-analysis-hugging-face"
version = "0.1.0"
description = ""
authors = ["nilton seixas <nfsseixas@gmail.com>"]
readme = "README.md"
packages = [{include = "sentiment_analysis_hugging_face"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
jupyterlab = "^4.0.5"
transformers = "^4.31.0"
numpy = "1.23.2"
pandas = "^2.0.3"
seaborn = "^0.12.2"
matplotlib = "^3.7.2"
scikit-learn = "^1.3.0"
tensorflow = "^2.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
